# joebot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  flake.nix  justfile  update.sh
src/: args.rs  config.rs  discord.rs  lib.rs  main.rs  tracing.rs
src/events/: message_create.rs  message_update.rs  mod.rs
